--- a/changelog.txt
+++ b/changelog.txt
@@ -12,3 +12,6 @@
 - now the messages play sounds
 1.2 - 11/09/23
 - added some more buttons
+1.3 - 11/09/23
+- disks in the list are not ordered numerically from 1+
+- search now compares names by making them lowercase first.
