--- a/changelog.txt
+++ b/changelog.txt
@@ -15,3 +15,7 @@
 1.3 - 11/09/23
 - disks in the list are now ordered numerically from 1+
 - search now compares names by making them lowercase first.
+1.4 - 11/09/23
+- now when changing the disk of an existing record, if the disk doesnt exist, it will be created
+- the preview will be hidden when refreshing the list of results
+- double clicking on the preview will also hide it
