--- a/changelog.txt
+++ b/changelog.txt
@@ -22,3 +22,12 @@
 1.5 - 11/09/23
 - fixed delete disk - it will delete teh selected disk instead of the first disk
 - if you select multiple items in the result list, the fields of the change tab will be empty instead of filled
+1.6 - 12/09/23
+- added context menu on the button CHANGE that lets you change only a part of a record or records with value from the fields
+- Changing a record will now refresh the list of results instead of clearing it- the last requested disk, disks, or search
+- changing a record now clears the fields of the change menu
+- Improved and optimized the search logic
+- When you select a record in the result list, the count for selected tags will also be written in teh name of the groupbox
+- increased the size of the buttons of the context menu of the results list
+- Load renamed to load database
+
