--- a/changelog.txt
+++ b/changelog.txt
@@ -60,3 +60,5 @@
 - all other forms now also have hand as cursor for their buttons. The radiobuttons too
 - "change disk number" now also has an icon
 - refresh list,delete disk and change disk number also refreshes the text in the groupbox of disks
+1.12   - 14/09/23
+- Added a button "search with google" on the context menu of the lsit of results. Now you can search a record  in google with one click.
