--- a/changelog.txt
+++ b/changelog.txt
@@ -77,4 +77,9 @@
 1.16 - 18/09/23
 - You can now mark a record as missing or broken
 - in searach also added filters for those
-
+1.17 - 20/09/23
+- in the search tab added a buttons "Search Count" and "Search History". You now go back to a past search
+- adding a record refreshes the last search regardless if that last addition would change the search or not
+- You can now change your search to be one from your search history
+- Added input limti of 150 characters to all search fields
+- now when a search doesnt have results, the label will say 0
