--- a/changelog.txt
+++ b/changelog.txt
@@ -83,3 +83,5 @@
 - You can now change your search to be one from your search history
 - Added input limti of 150 characters to all search fields
 - now when a search doesnt have results, the label will say 0
+1.18 - 22/09/23
+- In the context menu of the list of records, added "remove string in titles" and "repalce string in titles"
